--- a/client-app/src/styles/Checkout.scss
+++ b/client-app/src/styles/Checkout.scss
@@ -6,5 +6,15 @@
     h1 {
       color: $secondary-color;
     }
+    .checkout-table {
+        table {
+            width: '100%';
+            border-collapse: 'collapse';
+        }
+        td, th {
+            border: '1px solid #ddd';
+            padding: '8px'
+        }
+    }
 }
   
