--- a/client-app/src/styles/Checkout.scss
+++ b/client-app/src/styles/Checkout.scss
@@ -6,15 +6,9 @@
     h1 {
       color: $secondary-color;
     }
-    .checkout-table {
-        table {
-            width: '100%';
-            border-collapse: 'collapse';
-        }
-        td, th {
-            border: '1px solid #ddd';
-            padding: '8px'
-        }
+    .input-container  {
+        margin-top: 10px;
+        width: fit-content;
     }
 }
   
