--- a/client-app/src/components/styles/CoffeeCard.scss
+++ b/client-app/src/components/styles/CoffeeCard.scss
@@ -6,7 +6,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 300px;
   text-align: center;
-  height: max-content;
+  height: fit-content;
 }
 
 .coffee-card h2 {
