--- a/client-app/src/components/styles/Navbar.scss
+++ b/client-app/src/components/styles/Navbar.scss
@@ -14,7 +14,7 @@
         margin-right: 1rem;
   
         a {
-          color: #fff;
+          color: $background-color;
           text-decoration: none;
   
           &:hover {
