--- a/client-app/src/styles/Menu.scss
+++ b/client-app/src/styles/Menu.scss
@@ -1,6 +1,6 @@
 @import '../asset/styles/variable.scss';
 
-.admin-page {
+.menu-page {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,27 +10,6 @@
   .card-container {
     display: flex;
     gap: 20px; /* Space between the cards */
-  }
-
-  .card {
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    text-align: center;
-    width: 200px; /* Card width */
-    cursor: pointer;
-    transition: transform 0.2s, box-shadow 0.2s;
-
-    &:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-    }
-
-    h1 {
-      font-size: 1.5rem;
-      color: #333;
-    }
   }
 
   .options {
@@ -76,5 +55,5 @@
       display: inline-block;
       margin-left: 10px; /* Space between the label text and quantity/price */
     }
-  }
+}
   
