--- a/client-app/src/asset/styles/global.scss
+++ b/client-app/src/asset/styles/global.scss
@@ -1,7 +1,9 @@
+@import '../styles/variable.scss';
+
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  background-color: $background-color;
   color: #333;
 }
 
