--- a/client-app/src/asset/styles/variable.scss
+++ b/client-app/src/asset/styles/variable.scss
@@ -3,4 +3,5 @@ $secondary-color: #ff6f3c;
 $third-color: #ff9a3c;
 $fourth-color: #ffc93c;
 $text-color: #333;
-$background-color: #f4f4f4;
+$background-color: #fdf6e8;
+$white-color: #fff
