--- a/client-app/src/styles/Admin.scss
+++ b/client-app/src/styles/Admin.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #f8f9fa;
+  background-color: $background-color;
 
   .card-container {
     display: flex;
@@ -29,7 +29,7 @@
 
     h1 {
       font-size: 1.5rem;
-      color: #333;
+      color: $text-color;
     }
   }
 
