--- a/client-app/src/asset/styles/variable.scss
+++ b/client-app/src/asset/styles/variable.scss
@@ -4,4 +4,4 @@ $third-color: #ff9a3c;
 $fourth-color: #ffc93c;
 $text-color: #333;
 $background-color: #fdf6e8;
-$white-color: #fff
+$white-color: #fff;
