--- a/client-app/src/components/styles/Button.scss
+++ b/client-app/src/components/styles/Button.scss
@@ -5,7 +5,7 @@
   padding: 10px 20px;
   border: none;
   background-color: $primary-color;
-  color: #fff;
+  color: $white-color;
   border-radius: 5px;
   cursor: pointer;
   font-size: 1rem; /* Font size for the button */
