--- a/client-app/src/components/styles/CoffeeTable.scss
+++ b/client-app/src/components/styles/CoffeeTable.scss
@@ -6,5 +6,8 @@
           border: 1px solid #ddd;
           padding: 8px;
         }
-      }
+    }
+    .coffee-name {
+      margin-top: 8px;
+    }
 }
