--- a/client-app/src/components/styles/Input.scss
+++ b/client-app/src/components/styles/Input.scss
@@ -4,7 +4,7 @@
 .input-container {
     display: flex;
     flex-direction: column;
-    margin-bottom: 15px; /* Space between input fields */
+    margin-bottom: 15px; 
   }
   
   .input-field {
@@ -12,13 +12,13 @@
     border: 1px solid #ddd;
     border-radius: 5px;
     font-size: 1rem;
-    width: 100%; /* Full width of the container */
-    box-sizing: border-box; /* Include padding and border in the element’s total width and height */
+    width: 100%; 
+    box-sizing: border-box; 
     transition: border-color 0.3s;
   }
   
   .input-field:focus {
-    border-color: $fourth-color; /* Change border color on focus */
-    outline: none; /* Remove default focus outline */
+    border-color: $fourth-color; 
+    outline: none; 
   }
   
