--- a/client-app/src/components/styles/Dailog.scss
+++ b/client-app/src/components/styles/Dailog.scss
@@ -13,7 +13,7 @@
   }
   
   .dialog-content {
-    background-color: #fff;
+    background-color: $white-color;
     padding: 20px;
     border-radius: 10px;
     max-width: 500px;
