--- a/client-app/src/styles/Admin.scss
+++ b/client-app/src/styles/Admin.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background-color: $background-color;
 
   .card-container {
     display: flex;
@@ -12,7 +13,7 @@
   }
 
   .card {
-    background-color: #fff;
+    background-color: $white-color;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -34,46 +35,12 @@
 
   .options {
     background-color: $third-color;
-    color: #fff;
+    color: $white-color;
   }
 
   .create-own {
     background-color: $secondary-color;
-    color: #fff;
+    color: $white-color;
   }
-  .ingredient-option {
-      display: flex;
-      align-items: center;
-      margin-bottom: 15px; /* Space between each ingredient option */
-      padding: 10px; /* Padding around each option */
-      border: 1px solid #ddd; /* Light border for separation */
-      border-radius: 8px; /* Rounded corners */
-      background-color: #f9f9f9; /* Light background for better readability */
-      transition: background-color 0.3s, box-shadow 0.3s; /* Smooth transition effects */
-      
-      &:hover {
-        background-color: #e9ecef; /* Slightly darker background on hover */
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow on hover */
-      }
-    }
-    
-    .ingredient-option label {
-      display: flex;
-      align-items: center;
-      font-size: 1rem; /* Font size for better readability */
-      color: #333; /* Text color */
-    }
-    
-    .ingredient-option input[type="checkbox"] {
-      margin-right: 15px; /* Space between checkbox and text */
-      width: 20px; /* Size of the checkbox */
-      height: 20px; /* Size of the checkbox */
-      accent-color: $primary-color; /* Color of the checkbox when checked */
-    }
-    
-    .ingredient-option span {
-      display: inline-block;
-      margin-left: 10px; /* Space between the label text and quantity/price */
-    }
-  }
+}
   
