--- a/client-app/src/styles/Menu.scss
+++ b/client-app/src/styles/Menu.scss
@@ -29,7 +29,7 @@
     width: 100%; 
   }
   .custom-select {
-    border: 1px solid #ccc; 
+    border: 1px solid $border-color; 
     border-radius: 4px;
     padding: 10px 30px 10px 15px; 
     font-size: 16px;
